...
 */
object LiquidGlyphs {
    val Add: ImageVector get() = RawAddV4
    val Album: ImageVector get() = RawAlbumV4
    val AirSheetDevices: ImageVector get() = RawCastDevicesV4
    val Automix: ImageVector get() = RawAutomixBlocks
    val Back: ImageVector get() = RawBackV3
    val CastDevices: ImageVector get() = RawCastDevicesV4
    val Chat: ImageVector get() = RawChatV4
    val Check: ImageVector get() = RawCheckV3
    val CheckCircle: ImageVector get() = RawCheckV3
    val ChevronRight: ImageVector get() = RawChevronRightV3
    val Close: ImageVector get() = RawCloseV3
    val Download: ImageVector get() = RawDownloadTrack
    val DownloadTrack: ImageVector get() = RawDownloadTrack
    val Edit: ImageVector get() = RawEditV3
    val Equalizer: ImageVector get() = RawEqualizerPills
    val Error: ImageVector get() = RawErrorV3
    val ErrorOutline: ImageVector get() = RawErrorV3
    val Favorite: ImageVector get() = RawHeartV2
    val FavoriteBorder: ImageVector get() = RawHeartV2
    val GraphicEq: ImageVector get() = RawEqualizerPills
    val Headphones: ImageVector get() = RawHeadphonesV2
...
    val QueueMusic: ImageVector get() = RawQueueV3
    val Radio: ImageVector get() = RawRadioDisc
    val Refresh: ImageVector get() = RawRefreshV2
    val Repeat: ImageVector get() = RawRepeatV3
    val RepeatOne: ImageVector get() = RawRepeatV3
    val Search: ImageVector get() = RawSearchV3
    val Settings: ImageVector get() = RawSettingsPanel
    val Share: ImageVector get() = RawShareV3
    val Star: ImageVector get() = RawStarV2
    val ThumbDown: ImageVector get() = RawThumbDownV3
    val ThumbUp: ImageVector get() = RawThumbUpV3
    val TrackRadio: ImageVector get() = RawRadioDisc

...
